# ruddle

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
src/: Settings.toml  content_type.rs  httpsconnector.rs  main.rs  models.rs  post_api.rs  schemas.json  schemers.rs  server.rs  server_service.rs  service_response.rs  settings.rs  webview-host.rs  webview.rs
src/app/: index.html
src/app/css/: main.css
src/app/data/: stored.json
src/app/js/: main.js
src/app/js/test/: svg-script.js  test.json
src/models/: itemslist.rs  productlist.rs  proxydata.rs  untyped.rs  untypedvalue.rs
src/schemers/: schemaloader.rs  validator.rs
src/settings/: commandapi.rs  credentials.rs  header.rs  pathprovider.rs  qualifieduri.rs  resource.rs
src/support/: cryptea.rs  mod.rs  serialport.rs
